# StrategySim

./: .gitignore  CMakeLists.txt  build_app.sh  dev_notes.txt  main.cpp
includes/: rng.hpp  utility.hpp
src/: main.cpp
